--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
 body{
-  backround-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.boredpanda.com%2Fburning-roses-sculpure-the-ash-peter-jaworowski%2F&psig=AOvVaw1_RUEOzRQP34pSLHgiBa34&ust=1664383607747000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCKjoyJ62tfoCFQAAAAAdAAAAABAE')
+  backround-image: url('fb_thumb_55b0cb6349bde__700.jpg')
 }
