--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
 body{
-  backround-image: url('fb_thumb_55b0cb6349bde__700.jpg')
+  background-image: url('fb_thumb_55b0cb6349bde__700.jpg')
+  background-repeat: no-repeat;
 }
